feat(processing): cancel tour like